deploy: 31aeb5e02e592b1044a398147bb334b6eef518ed

--- a/connectors/index.html
+++ b/connectors/index.html
@@ -199,7 +199,7 @@
   
   
   <span class="md-ellipsis">
-    Home
+    Welcome
     
   </span>
   
@@ -221,7 +221,7 @@
   
   
   <span class="md-ellipsis">
-    Intro
+    Introduction
     
   </span>
   
