--- a/404.html
+++ b/404.html
@@ -190,7 +190,7 @@
   
   
   <span class="md-ellipsis">
-    Home
+    Welcome
     
   </span>
   
@@ -212,7 +212,7 @@
   
   
   <span class="md-ellipsis">
-    Intro
+    Introduction
     
   </span>
   
